--- a/style.css
+++ b/style.css
@@ -25,11 +25,9 @@ body{
 
 .card img{
     margin-top: 5%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
     height: 350px;
     width: 620px;
+    border-radius: 10px;
 }
 .card-title{
     text-align: left;
@@ -92,4 +90,60 @@ li span{
 .nutritions p,
 .table th{
     color: hsl(30, 10%, 34%);
+}
+@media (max-width: 1320px){
+    .card{
+        width: 55%;
+     }
+     .card img{
+        width: 95%;
+        height: 300px;
+        margin-top: 5%;
+    }
+  
+}
+@media (min-width: 768px) and (max-width: 992px){
+    .card{
+        width: 80%;
+     }
+     .card img{
+        width: 95%;
+        height: 350px;
+        margin-top: 5%;
+    }
+}
+
+@media (min-width: 491px) and (max-width:767px){
+    body{
+        background-color: hsl(330, 100%, 98%);
+    }
+
+    .card{
+       border-style: none;
+       width: 90%;
+    }
+
+    .card img{
+        width: 95%;
+        height: 350px;
+        margin-top: 5%;
+    }
+
+}
+
+@media(max-width: 490px) {
+    body{
+        background-color: hsl(0, 0%, 100%);
+    }
+    .card{
+        border-style: none;
+        width: 100%;
+     }
+     .card img{
+        width: 520px;
+        height: 200px;
+        border-radius: 0%;
+        margin-top: -6%;
+        margin-left: -8%;
+    }
 }
