--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     font-style: normal;
     font-size: 16px;
     background-color: hsl(30, 18%, 87%);
-
+}
 .attribution {
     font-family: "Outfit", sans-serif; 
     font-size: 11px; 
